--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  
+}
+body{
+  background-color: aliceblue;
+}
 .table th {
   white-space: nowrap;
   overflow: hidden;
@@ -69,11 +78,13 @@ input[type="number"] {
   font-weight: 500;
   border-bottom: 2px solid grey;
   display: inline-block;
+  color: #e3f2fd;
 }
 .extrahighlight {
   display: inline-block;
   font-weight: 700;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid grey;
+  color: #e3f2fd;
 }
 .th {
   width: 20%;
@@ -101,7 +112,7 @@ input[type="number"] {
   border-radius: 10px;
   border: 2px, solid gray;
 }
-.form .teablehead {
+.teablehead {
   background-color: lightblue;
   text-align: center;
 }
@@ -118,63 +129,96 @@ input[type="number"] {
   font-size: 45px;
 }
 .section-registration {
-  border: 2px solid black;
+  /* border: 2px solid black; */
   display: inline-block;
-  padding: 5px;
-  border-radius: 10px;
+  padding: 20px;
+  border-radius: 5px;
   margin: 20px;
   text-align: center;
+
+  box-shadow: 0px 0px 35px rgba(93, 93, 93, 0.867);
 }
 .section-registration input {
-  border: 2px solid black;
+  border: 2px solid rgb(220, 220, 220);
   display: inline-block;
+  /* box-shadow: 0px 0px 10px rgba(93, 93, 93, 0.867); */
   padding: 5px;
-  border-radius: 10px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+
   margin-bottom: 5px;
 }
-.section-registration select {
-  border: 2px solid black;
-  display: inline-block;
-  padding: 5px;
-  border-radius: 10px;
-  padding-right: 20;
-  padding-left: 20;
-  width: 100px;
-  margin-bottom: 5px;
-}
+
 .section-registration label {
   display: inline-block;
   padding: 5px;
+  color: darkslateblue;
+  margin: 10px;
   border-radius: 10px;
   margin-right: 5px;
 }
-.section-registration button {
-  border: 2px solid lightblue;
+.section-registration h1 {
+  display: inline-block;
+  /* padding: 5px; */
+  border-bottom: 3px solid rgb(100, 100, 100);
+  color: darkslateblue;
+  margin: 10px;
+  /* border-radius: 10px; */
+  margin-right: 5px;
+}
+/* .section-registration button {
+  border: 2px solid rgb(79, 127, 179);
   color: black;
   font-weight: 500px;
   display: inline-block;
   padding: 5px;
   border-radius: 10px;
   margin-right: 5px;
+} */
+.btn {
+  max-width: fit-content;
+  font-size: 2vh;
+  /* background-color: aqua; */
 }
-.section-registration button:hover {
+.loginbtn {
+  margin: 100px;
+  /* background-color: aqua; */
+}
+/* .section-registration button:hover {
   transition: 0.3s;
-  background-color: lightblue;
-  border: 2px solid lightblue;
+  background-color: rgb(79, 127, 179);
+  border: 2px solid rgb(79, 127, 179);
   color: black;
   font-weight: 500px;
   display: inline-block;
   padding: 5px;
   border-radius: 10px;
   margin-right: 5px;
-}
+} */
 .logo {
-  height: 100px;
-  width: 170px;
+  max-height: 100px;
+  max-width: 170px;
   /* padding: 0; */
   display: inline-block;
 }
-.head h1 {
+.datatable {
+  margin-bottom: 150px;
+  margin: 10px;
+  width: 100%;
+}
+.datatable th {
+  /* width: 33%; */
+  
+  text-align: center;
+  /* background-color: aqua; */
+}
+.datatable button{
+  margin: 5px;
+}
+.datatable .helight {
+  font-weight: 500;
+  font-size: 20px;
+  background-color: lightblue;
 }
 .logodiv {
   width: 38%;
@@ -184,13 +228,34 @@ input[type="number"] {
   text-align: start;
   /* background-color: black; */
 }
-.titel {
-  /* width: 0%; */
-  text-align: center;
-  padding-top: 30px;
-  justify-content: end;
+.logodiv2 {
+  width: 20%;
+  display: inline-block;
+  margin: 10px 0px;
+  text-align: end;
   /* background-color: black; */
 }
+.btn-container{
+  min-height: 450px;
+  text-align: center;
+  align-items: center;
+  display: flex;
+}
+.loader{
+  /* min-height: 450px; */
+  /* background-color: aqua; */
+  gap: 20px;
+  height: 734px;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+}
+.loader h1{
+  color: #00008b;
+  font-size: 40px;
+}
+
 .col-form-label {
   /* background-color: aqua; */
   font-weight: 800;
@@ -198,4 +263,76 @@ input[type="number"] {
 .row {
   /* border-bottom: 2px solid grey; */
   padding: 5px;
+}
+/* slider */
+.slide-container , .slide{
+  /* padding: 20px; */
+ /* box-shadow: 0px 0px 20px black; */
+ /* background-color: black; */
+ background-color: rgba(128, 128, 128, 0.251);
+ box-shadow: 0px 0px 70px rgb(97, 97, 97);
+}
+.slidimage{
+  height: 450px;
+  border-radius: 20px;
+   
+   border: 5px solid rgba(128, 128, 128, 0.57);
+   /* margin-bottom: 15px; */
+  /* filter: opacity(50%); */
+}
+
+/* footer */
+
+.foot{
+  background-color: #fff;
+}
+.parent{
+  /* background-color: aqua; */
+  height: 150px;
+}
+.slider {
+  margin:0 20px;
+  overflow:"hidden";
+  padding:2rem 0;
+}
+
+.slider img {
+  /* width: ; */
+  /* max-height: 300px; */
+  border-radius:10px;
+  /* background-color: blue; */
+}
+
+.react-multi-carousel-list {
+padding: 0rem 0 2rem 0;
+}
+
+.custom-dot-list-style button{
+border: none;
+background: rgb(211, 196, 196);
+}
+.react-multi-carousel-dot.react-multi-carousel-dot--active button{
+background: rgb(26, 24, 24) !important;
+}
+.foot-info-contect{
+  /* background-color: aqua; */
+  display: flex;
+  padding: 10px;
+}
+.info{
+  /* background-color: aqua; */
+  /* display: inline-block; */
+  width: 50%;
+  align-items: start;
+  text-align: left;
+}
+.infotext{
+  margin: 10px;
+}
+.contect{
+  /* background-color: blue; */
+  align-items: end;
+  justify-content: end;
+  width: 50%;
+  text-align: end;
 }
