--- a/src/pages/Form.css
+++ b/src/pages/Form.css
@@ -62,7 +62,7 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 .highlight {
-  font-weight: 500;
+  /* font-weight: 500; */
   border-bottom: 2px solid grey;
   display: inline-block;
 }
@@ -159,4 +159,37 @@ input[type="number"] {
 .button button {
   width: 150px;
   margin: 150px 100px 50px 100px;
+}
+
+@media (max-width: 991px){
+  .logodiv2 {
+    display: none;
+  }
+  .logodiv {
+    display: none;
+  }
+  .titel {
+  width: 100%;
+  text-align: center;
+  padding-top: 30px;
+  justify-content: end;
+  color: aliceblue;
+  /* background-color: black; */
+}
+.btn-container{
+  display: flex;
+  /* background-color: aqua; */
+}
+.btn-container a{
+  margin: 5px;
+ display: block;
+  /* background-color: aqua; */
+
+}
+.btn{
+  min-width: 130px;
+}
+.loginbtn{
+  margin: auto;
+}
 }
